trying to get channel id via bot instance

--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 ﻿{
-    "ApiId": 0,
-    "ApiHash": "xxx",
-    "BotToken": "xxx"
+  "ApiId": 0,
+  "ApiHash": "xxx",
+  "PhoneNumber": "xxx",
+  "Password": "xxx",
+  "BotToken": "xxx"
 }
